--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "threads.h": "c",
         "variables.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "mssv_utils.h": "c"
     }
 }
